# zest-garde

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
garde/: Cargo.toml
garde/src/: error.rs  lib.rs  validate.rs
garde/src/rules/: email.rs  range.rs
garde/tests/: rules.rs  ui.rs
garde/tests/rules/: crate_name.rs  custom.rs  length.rs  mod.rs  multi_rule.rs  phone_number.rs  rename.rs
garde/tests/rules/snapshots/: rules__rules__crate_name__ascii_invalid.snap  rules__rules__phone_number__phone_number_invalid.snap
garde/tests/ui/compile-fail/: crate_name.rs  crate_name.stderr
garde/tests/ui/compile-pass/: crate_name.rs
garde_derive/: Cargo.toml
garde_derive/src/: check.rs  emit.rs  model.rs  syntax.rs
xtask/: Cargo.toml
xtask/src/: main.rs  util.rs
xtask/src/task/: check.rs  publish.rs  setup.rs  test.rs  version.rs
