[workspace]
members = ["garde", "garde_derive"]
resolver = "3"

[workspace.package]
version = "0.23.0+zest"
edition = "2024"
repository = "https://github.com/chielo-org/zest-garde"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
garde_derive = { path = "garde_derive", version = "=0.23.0+zest", default-features = false }

[profile.dev.package]
insta = { opt-level = 3 }
trybuild = { opt-level = 3 }
