[package]
name = "garde_derive"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Derive macros for garde"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
# NOTE: When adding new validation rule feature flags, don't forget to add checking to `src/syntax.rs`
regex = ["dep:regex"]
js-sys = []
email = []
url = []
credit-card = []
phone-number = []

[dependencies]
proc-macro2 = { version = "1" }
quote = { version = "1" }
regex = { version = "1", default-features = false, features = ["std"], optional = true }
syn = { version = "2", features = ["full", "derive"] }
