[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/jprochazk/garde"
license = "MIT OR Apache-2.0"
description = "xtask for garde"
readme = "../README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
argp = "0.4"
glob = { version = "0.3", default-features = false }
semver = "1"
toml_edit = { version = "0.25" }

[workspace]
